--- a/svelte/public/global.css
+++ b/svelte/public/global.css
@@ -18,6 +18,11 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
+h3{
+    color: #fff;
+    text-align: center;
+}
+
 
 button{
     animation : none;
