--- a/svelte/public/global.css
+++ b/svelte/public/global.css
@@ -5,7 +5,6 @@
     -webkit-box-sizing: border-box; 
 	box-sizing: border-box; 
     font-family: '-apple-system', 'Roboto', sans-serif;
-    
 }
 
 html, body {
@@ -22,6 +21,12 @@ h3{
     color: #fff;
     text-align: center;
 }
+
+h2{
+    color: #fff;
+    text-align: center;
+}
+
 
 
 button{
